# slurpexec

./: Cargo.toml
src/: main.rs
